# aetheros

./: .gitignore  CHANGELOG.md  Dockerfile  Domain Canvas (v5).md  Makefile  README.md  docker-compose.yml  phase1.md  phaseX.md  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/plans/: dashboard-mission-control.md
apps/web/: .env.example  .gitignore  next.config.mjs  next.config.ts  package-lock.json  package.json
docs/: API.md  DEPLOYMENT.md  LIVING_SPEC.md  RELEASE_CHECKLIST.md  USER_GUIDE.md  WORKTREES.md
docs/superpowers/plans/: 2026-04-26-provider-model-selector.md
docs/superpowers/specs/: 2026-04-26-provider-model-selector-design.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: inkosai-overview.json
plugins/bmad-plugin/: __init__.py  plugin.json  plugin.py
plugins/gastown-plugin/: __init__.py  plugin.json  plugin.py
plugins/gsd-plugin/: __init__.py  plugin.json  plugin.py
sandbox/: plugin-executor.ts
services/api/: __init__.py  database.py  dependencies.py  main.py  middleware.py
services/api/routes/: __init__.py  aethergit.py  auth.py  auth_production.py  canvas.py  debates.py  domains.py  explainability.py  folder_tree.py  health.py  (+11 more)
tests/: test_aethergit_advanced.py  test_auth_production.py  test_browser_node.py  test_canvas_core.py  test_canvas_v5.py  test_debate.py  test_domain_blueprint.py  test_domain_creation.py  test_explainability.py  test_folder_tree.py  test_folder_tree_enhancements.py  test_health.py  test_intelligence_profile.py  test_knowledge_transfer.py  test_marketplace.py  test_multi_domain_swarm.py  test_observability.py  test_planning.py  test_planning_domains.py  test_plugin_bridge.py  test_plugin_core.py  test_prime_introspection.py  test_prime_personalization.py  test_prime_profile.py  test_prime_profile_learning.py  test_prime_proposals.py  test_profile_consolidated.py  test_settings_routes.py  test_simulation.py  test_skill_evolution.py  test_smoke.py  test_smoke_production.py  test_stabilization.py  test_starter_canvas.py  test_tape.py  test_terminal_node.py
(+51 files in other folders)
