[project]
name = "aetheros"
version = "0.1.0"
description = "The Ultimate AI Orchestration Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.10.0",
    "langgraph>=0.2.0",
    "dspy-ai>=2.5.0",
    "gitpython>=3.1.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["packages", "services", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"packages/**/__init__.py" = ["F401"]  # Re-exports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["packages", "services"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = ["."]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
